# Arch-Verse-Code-Of-Conduct

./: README.md.jinja  pylock.toml  pyproject.toml  readme.md
sections/: definitions.json  rules.json
src/archverse_coc/: __init__.py  __main__.py
